syntax = "proto3";

option java_package = "org.neo4j.gds.config.proto";
option java_outer_classname = "CommonConfigProto";

message AlgoBaseConfigProto {
  string username = 1;
  bool sudo = 2;
  oneof graphConfig {
    NamedGraph namedGraph = 3;
    AnonymousGraph anonymousGraph = 4;
  }
}

message NamedGraph {
  string name = 1;
}

message AnonymousGraph {
  repeated string relationshipTypes = 1;
  repeated string nodeLabels = 2;
}

message ModelConfigProto {
  string modelName = 1;
}

message BatchSizeConfigProto {
  int32 batchSize = 1;
}

message IterationsConfigProto {
  int32 maxIterations = 1;
}

message ToleranceConfigProto {
  double tolerance = 1;
}

message EmbeddingDimensionConfigProto {
  int32 embeddingDimension = 1;
}

message RelationshipWeightConfigProto {
  string relationshipWeightProperty = 1;
}

message FeaturePropertiesConfigProto {
  repeated string featureProperties = 1;
  bool propertiesMustExistForEachNodeLabel = 2;
}

message RandomSeed {
  int64 value = 1;
  bool present = 2;
}
